# factor24groupBot

./: .env.dist  .gitignore  README.md  factor24groupBot.service  pyproject.toml  requirements.txt  scripts.py  topicks.json  topics.json  topics_old.json
factor24groupBot/: __main__.py  settings.py
